public enum Color {
    RED,
    YELLOW,
    ORANGE,
    BROWN;
}
