@startuml

title __ENTIDADES's Class Diagram__\n

  namespace fran  {
    namespace Entidades {
      enum Entidades.Color {
        BROWN
        ORANGE
        RED
        YELLOW
      }
    }
  }
  

  namespace fran {
    namespace Entidades {
      class Entidades.Coordinates {
          - x : Double
          - y : float
          + Coordinates()
          + Coordinates()
          + getX()
          + getY()
          + setX()
          + setY()
          + toCsv()
      }
    }
  }
  

  namespace fran {
    namespace Entidades {
      class Entidades.Location {
          - name : String
          - x : Long
          - y : float
          - z : Float
          + Location()
          + Location()
          + getName()
          + getX()
          + getY()
          + getZ()
          + setName()
          + setX()
          + setY()
          + setZ()
          + toCsv()
      }
    }
  }
  

  namespace fran {
    namespace Entidades {
      class Entidades.Movie {
          - budget : Integer
          - creationDate : Date
          - id : long
          - name : String
          - oscarsCount : long
          - totalBoxOffice : int
          + Movie()
          + Movie()
          + compare()
          + compareTo()
          + getBudget()
          + getCoordinates()
          + getCreationDate()
          + getId()
          + getMpaaRating()
          + getName()
          + getOperator()
          + getOscarsCount()
          + getTotalBoxOffice()
          + setBudget()
          + setCoordinates()
          + setCreationDate()
          + setId()
          + setMpaaRating()
          + setName()
          + setOperator()
          + setOscarsCount()
          + setTotalBoxOffice()
          + toCsv()
          + toString()
      }
    }
  }
  

  namespace fran {
    namespace Entidades {
      enum Entidades.MpaaRating{
        G
        NC_17
        PG
        PG_13
        R
      }
    }
  }
  

  namespace  fran {
    namespace Entidades {
      class Entidades.Person {
          - height : Long
          - name : String
          - passportID : String
          + Person()
          + Person()
          + getEyeColor()
          + getHeight()
          + getLocation()
          + getName()
          + getPassportID()
          + setEyeColor()
          + setHeight()
          + setLocation()
          + setName()
          + setPassportID()
          + toCsv()
      }
    }
  }
  

  Entidades.Movie .up.|> java.lang.Comparable
  Entidades.Movie .up.|> java.util.Comparator
  Entidades.Movie o-- Entidades.Coordinates : coordinates
  Entidades.Movie o-- Entidades.MpaaRating : mpaaRating
  Entidades.Movie o-- Entidades.Person : operator
  Entidades.Person o-- Entidades.Color : eyeColor
  Entidades.Person o-- Entidades.Location : location


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
